# Sentinel-ai

sentinel-ai/: .dockerignore  .env.example  .gitignore  Dockerfile  EXPLAINER.md  README.md  TODO.md  docker-compose.infra.yml  docker-compose.yml  main.py  postman_collection_sentinal_ai.json  postman_collection_sentinel_ai.json  pyproject.toml  pytest.ini  requirements.txt
sentinel-ai/agents/: __init__.py  analyst_agent.py  mitre_matcher.py  orchestrator.py  rl_agent.py
sentinel-ai/api/: main.py
sentinel-ai/config/: mitre_attack.json  settings.py
sentinel-ai/config/logstash/pipeline/: sentinel.conf
sentinel-ai/detection/: __init__.py  anomaly_detector.py  log_heatmap.py  vision_transformer.py
sentinel-ai/graph/: __init__.py  attack_graph.py
sentinel-ai/ingestion/: __init__.py  log_ingester.py  packet_ingester.py  pipeline.py
sentinel-ai/mitigation/: __init__.py  response_engine.py
sentinel-ai/models/: .gitkeep
sentinel-ai/prompts/: analyst_prompt.md  mitre_prompt.md
sentinel-ai/scripts/: run_tests.sh  setup_dev.ps1  setup_dev.sh  train_rl.sh
sentinel-ai/simulation/: __init__.py  threat_simulator.py
sentinel-ai/tests/: __init__.py  conftest.py  test_agents.py  test_api.py  test_detection.py  test_graph.py  test_ingestion.py  test_mitigation.py  test_orchestrator.py  test_simulation.py
